--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     width: 100%;
     height: 12vh;
     z-index: 11;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     /* background-color: #1ed760; */
 }
@@ -71,6 +71,7 @@ body{
 .song-list ul li:hover{
     background-color: #252525;
     border-radius: 7px;
+    text-decoration: underline;
 }
 .song-list ul img{
     cursor: pointer;
@@ -79,20 +80,21 @@ body{
     object-fit: contain;
 }
 
-.song-list ul svg{
+.song-list ul #play1{
     cursor: pointer;
     position: absolute;
+    width: 23px;
     left: 30px;
     bottom: 20px;
     opacity: 0;
 }
-.song-list ul svg:hover{
+.song-list ul #play1:hover{
     opacity: 1;
     scale: 1.2;
 }
 
 
-.footer{
+/* .footer{
     font-size: 10px;
     gap: 5px;
     position: absolute;
@@ -102,7 +104,7 @@ body{
 .footer a{
     color: gray;
     text-decoration: none;
-}
+} */
 
 
 
@@ -183,8 +185,29 @@ body{
     opacity: 0;
     transition: all 0.5s ease-out;
 }
-
 .circle-container svg{
     width: 40px;
     height: 26px;
+}
+
+.controls img, svg:hover{
+    cursor: pointer;
+}
+.seekbar{
+    position: absolute;
+    bottom: 25px;
+    background-color: #252525;
+    height: 4px;
+    width: 40vw;
+    margin: 0 30vw;
+    border-radius: 4px;
+}
+.circle{
+    position: relative;
+    bottom: 2px;
+    background-color: azure;
+    border-radius: 4px;
+    height: 8px;
+    width: 8px;
+    left: 0%;
 }
