--- a/style.css
+++ b/style.css
@@ -191,14 +191,14 @@ body{
 }
 
 .controls{
-    justify-content: space-between;
+    justify-content: space-around;
     /* gap: 20px; */
 }
 .controls img:hover{
     cursor: pointer;
 }
 .controlbtn{
-    padding-left: 60px;
+    margin: auto;
 }
 .seekbar{
     position: absolute;
@@ -219,10 +219,10 @@ body{
     left: 0%;
 }
 .songtime{
-    padding: 0 62px;
-    font-size: 10px;
-    position: absolute;
-    right: 45vw;
+    padding: 0 12px;
+    font-size: 14px;
+    /* position: absolute;
+    right: 45vw; */
 }
 .songinfo{
     padding: 0 12px;
