--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     font-family: 'SpotifyMixUI', 'CircularSp-Arab', CircularSp-Hebr, CircularSp-Cyrl, CircularSp-Grek, CircularSp-Deva, "Helvetica Neue", helvetica, arial, "Hiragino Kaku Gothic ProN", Meiryo, "MS Gothic";
 }
+
+:root{
+    --a:0;
+    --b:60px;
+}
+
 body{
     background-color: black;
     color: white;
@@ -10,15 +16,15 @@ body{
 
 .left{
     width: 23vw;
-    height: 88vh;
+    height: 82vh;
     gap: 4px;
-    overflow: auto;
+    transition: all 0.7s ease-in;
 }
 .right{
     padding-top: 10px;
     width: 77vw;
-    height: 86vh;
-    overflow: auto;
+    height: 82vh;
+    /* overflow: auto; */
 }
 .playbar{
     width: 100%;
@@ -32,7 +38,12 @@ body{
 /* _________________________Left______________________________*/
 
 
-
+.home{
+    height: 17vh;
+}
+.side{
+    justify-content: space-between;
+}
 .home ul li{
     display: flex;
     gap :20px;
@@ -45,9 +56,8 @@ body{
 
 .library{
     margin-top: 10px;
-    height: 61%;
-    position: relative;
-    overflow: auto;
+    height: 54vh;
+    overflow: auto; 
 }
 .heading{
     gap:20px;
@@ -57,12 +67,12 @@ body{
 }
 .song-list{
     margin-top: 10px;
-    /* height: 354px; */
-    overflow: auto;
+}
+.info div{
+    word-break: break-all;
 }
 .song-list ul{
     margin-top: 15px;
-    position: relative;
 }
 .song-list ul li{
     display: flex;
@@ -79,7 +89,6 @@ body{
 .song-list ul img{
     cursor: pointer;
     width: 30%;
-    /* height: 20%; */
     object-fit: contain;
 }
 
@@ -121,6 +130,10 @@ body{
 .header > *{
     padding: 7px 20px;
 }
+
+.nav{
+    gap: 18px;
+}
 .login{
     padding: 15px 30px;
     font-weight: 700;
@@ -152,45 +165,60 @@ body{
 .spotifyPlaylists{
     overflow-y: scroll;
     background-color: #101010;
-    height: 88%;
+    height: 75vh;
 }
 .spotifyPlaylists h1{
     padding: 16px;
 }
-.spotifyPlaylists .card{
-    width: 169px;
-    height: 280px;
+.card{
+    width: 11vw;
+    /* height: 250px; */
     position: relative;
+    margin: 10px;
+    font-size: 12px;
+    transition: all 0.5s ease-out;
 }
+
+
+.card:hover{
+    background-color: #4b4b4b;
+    cursor: pointer;
+    --a: 1;
+    --b: 70px;
+}
+
+
 .card > *{
     padding-top: 4px;
 }
 .cardContainer{
     gap: 10px;  
     flex-wrap: wrap;
-    max-height: 72vh;
 }
 .card img{
     width: 100%;
+    /* height: 60%; */
     object-fit: contain;
 }
 .circle-container{
     position: absolute;
-    bottom: 85px;
+    z-index: 11;
+    bottom: var(--b);
     right: 18px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 40px; 
-    height: 40px;
+    height: 38px;
     background-color: #1ed760;
     border-radius: 50%;
-    opacity: 0;
-    transition: all 0.5s ease-out;
+    opacity: var(--a);
+    transition: all 0.2s ease-out;
 }
 .circle-container svg{
-    width: 40px;
-    height: 26px;
+    width: 26px;
+    height: 22px;
+    padding-bottom: 3px;
 }
 
 
@@ -202,25 +230,18 @@ body{
     /* gap: 20px; */
 }
 .controlbtn img{
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
 }
 .controlbtn img:hover{
     cursor: pointer;
 }
-/* .controlbtn{
-    padding-bottom: 5px;
-    margin-left: 400px;
-} */
 
 
 .seekbar{
-    /* position: absolute; */
-    /* bottom: 30px; */
     background-color: #252525;
     height: 4px;
     width: 40vw;
     cursor: pointer;
-    /* margin: 0 33vw; */
     border-radius: 4px;
 }
 .circle{
@@ -240,8 +261,93 @@ body{
     right: 45vw; */
 }
 .songinfo{
-    padding: 0 12px;
-    margin-right: 90px;
+    font-size: 22px;
+    padding: 15px 42px;
     position: absolute;
-    left: 0;
+    font-weight: 500;
+}
+.volume{
+    padding: 15px 42px;
+    position: absolute;
+    right: 22px;
+    top: 0;
+    display: flex;
+    gap: 10px;
+}
+input[type="range"]{
+    background-color: #252525;
+    height: 5px;
+    width: 9vw;
+    cursor: pointer;
+    border-radius: 4px;
+    /* -webkit-appearance: none;  */
+    /* margin-top: 10px; */
+}
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Remove default styling */
+    width: 8px; /* Small circular thumb */
+    height: 8px;
+    background: #ffffff; /* White thumb */
+    border-radius: 50%; /* Round thumb */
+}
+
+
+/* ______________________Responsiveness___________________ */
+
+.hamburger, .lgo, .close{
+    display: none;
+}
+
+@media (max-width: 900px) {
+    .left{
+        z-index: 51;
+        position: absolute;
+        left: -100%;
+    }
+    
+    .right{
+        width: 100%;
+    }
+    .login{
+        padding: 7px 15px;
+    }
+    .card{
+        font-size: 8px;
+    }
+    .cardContainer{
+        justify-content: center;
+    }
+    .hamburger, .close, .lgo{
+       display: block;
+    }
+    .lft, .ryt{
+        display: none;
+    }
+    .songinfo{
+        font-size: 10px;
+        padding: 15px 5px;
+    }
+}
+@media (max-width: 795px) {
+    .left{
+        width: 90vw;
+    }
+    .card{
+        width: 30vw;
+    }
+    .volume{
+        padding: 15px 10px;
+        position: absolute;
+        right: 10px;
+        display: table-column;
+    }
+    .volume img{
+        width: 15px;
+        margin-left: 3.5vw;
+    }
+    input[type="range"]{
+        background-color: #252525;
+        height: 8px;
+        width: 10vw;
+    }
 }
